--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/card-heading.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,5 +15,55 @@
     />
     <title>Social proof section</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <div class="card-reviews">
+        <div class="reviews">
+          <div class="reviews-text">
+            <h1 class="reviews-number">
+              10,000+ of our users love our products.
+            </h1>
+            <p class="heading-paragraph">
+              We only provide great products combined with excellent customer
+              service. See what our satisfied customers are saying about our
+              services.
+            </p>
+          </div>
+          <div class="reviews-stars">
+            <div class="review">
+              <div class="star-icon">
+                <img src="/images/icon-star.svg" alt="star" />
+                <img src="/images/icon-star.svg" alt="star" />
+                <img src="/images/icon-star.svg" alt="star" />
+                <img src="/images/icon-star.svg" alt="star" />
+                <img src="/images/icon-star.svg" alt="star" />
+              </div>
+              <p class="review-title">Rated 5 stars in Reviews</p>
+            </div>
+            <div class="review">
+              <div class="star-icon">
+                <img src="/images/icon-star.svg" alt="star" />
+                <img src="/images/icon-star.svg" alt="star" />
+                <img src="/images/icon-star.svg" alt="star" />
+                <img src="/images/icon-star.svg" alt="star" />
+                <img src="/images/icon-star.svg" alt="star" />
+              </div>
+              <p class="review-title">Rated 5 stars in Report Guru</p>
+            </div>
+            <div class="review">
+              <div class="star-icon">
+                <img src="/images/icon-star.svg" alt="star" />
+                <img src="/images/icon-star.svg" alt="star" />
+                <img src="/images/icon-star.svg" alt="star" />
+                <img src="/images/icon-star.svg" alt="star" />
+                <img src="/images/icon-star.svg" alt="star" />
+              </div>
+              <p class="review-title">Rated 5 stars in BestTech</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="testimonials"></div>
+    </main>
+  </body>
 </html>
