--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/card-heading.css" />
+    <link rel="stylesheet" href="css/testimonials-section.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -63,7 +64,56 @@
           </div>
         </div>
       </div>
-      <div class="testimonials"></div>
+      <div class="testimonials">
+        <article>
+          <div class="buyer-profile">
+            <div class="buyer-image">
+              <img src="/images/image-colton.jpg" alt="buyer-image" />
+            </div>
+            <buyer-info>
+              <div class="name">Colton Smith</div>
+              <b class="status">Verified Buyer</b>
+            </buyer-info>
+          </div>
+          <p class="testimonial-description">
+            “ We needed the same printed design as the one we had ordered a week
+            prior. Not only did they find the original order, but we also
+            received it in time. Excellent! ”
+          </p>
+        </article>
+        <article>
+          <div class="buyer-profile">
+            <div class="buyer-image">
+              <img src="/images/image-irene.jpg" alt="buyer-image" />
+            </div>
+            <buyer-info>
+              <div class="name">Irene Roberts</div>
+              <b class="status">Verified Buyer</b>
+            </buyer-info>
+          </div>
+          <p class="testimonial-description">
+            “ Customer service is always excellent and very quick turn around.
+            Completely delighted with the simplicity of the purchase and the
+            speed of delivery.”
+          </p>
+        </article>
+        <article>
+          <div class="buyer-profile">
+            <div class="buyer-image">
+              <img src="/images/image-anne.jpg" alt="buyer-image" />
+            </div>
+            <buyer-info>
+              <div class="name">Anne Wallace</div>
+              <b class="status">Verified Buyer</b>
+            </buyer-info>
+          </div>
+          <p class="testimonial-description">
+            “ Put an order with this company and can only praise them for the
+            very high standard. Will definitely use them again and recommend
+            them to everyone! ”
+          </p>
+        </article>
+      </div>
     </main>
   </body>
 </html>
