Readme file edited

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
       </div>
       <div class="testimonials">
-        <article>
+        <div class="article">
           <div class="buyer-profile">
             <div class="buyer-image">
               <img src="/images/image-colton.jpg" alt="buyer-image" />
@@ -80,8 +80,8 @@
             prior. Not only did they find the original order, but we also
             received it in time. Excellent! ”
           </p>
-        </article>
-        <article>
+        </div>
+        <div class="article">
           <div class="buyer-profile">
             <div class="buyer-image">
               <img src="/images/image-irene.jpg" alt="buyer-image" />
@@ -96,8 +96,9 @@
             Completely delighted with the simplicity of the purchase and the
             speed of delivery.”
           </p>
-        </article>
-        <article>
+        </div>
+
+        <div class="article">
           <div class="buyer-profile">
             <div class="buyer-image">
               <img src="/images/image-anne.jpg" alt="buyer-image" />
@@ -112,7 +113,7 @@
             very high standard. Will definitely use them again and recommend
             them to everyone! ”
           </p>
-        </article>
+        </div>
       </div>
     </main>
   </body>
